syntax = "proto3";

package envoy.service.ratelimit.v3;

import "envoy/config/core/v3/base.proto";
import "envoy/extensions/common/ratelimit/v3/ratelimit.proto";
import "google/protobuf/struct.proto";
import "google/protobuf/duration.proto";

option java_package = "io.envoyproxy.envoy.service.ratelimit.v3";
option java_outer_classname = "RlsProto";
option java_multiple_files = true;
option go_package = "github.com/envoyproxy/go-control-plane/envoy/service/ratelimit/v3;ratelimitv3";

service RateLimitService {
  // Determine whether rate limiting should take place.
  rpc ShouldRateLimit(RateLimitRequest) returns (RateLimitResponse) {}
}

message RateLimitRequest {
  // All rate limit requests must specify a domain. This enables the configuration to be per
  // application without fear of overlap. E.g., "envoy".
  string domain = 1;

  // All rate limit requests must specify at least one Descriptor or the rate limit request will be
  // rejected.
  repeated envoy.extensions.common.ratelimit.v3.RateLimitDescriptor descriptors = 2;

  // Rate limit requests can optionally specify the number of hits a request adds to the matched
  // limit. If the value is not set, it defaults to 1.
  uint32 hits_addend = 3;
}

message RateLimitResponse {
  enum Code {
    // The response code is not known.
    UNKNOWN = 0;

    // The response code to notify that the number of requests are under limit.
    OK = 1;

    // The response code to notify that the number of requests are over limit.
    OVER_LIMIT = 2;
  }

  // The overall response code which takes into account all of the descriptors that were passed
  // in the RateLimitRequest.
  Code overall_code = 1;

  // A list of DescriptorStatus that corresponds to the rate limit descriptors in the request.
  // This allows the client to know which descriptor(s) caused the over limit code.
  repeated DescriptorStatus statuses = 2;

  // Defines the status of a rate limit descriptor.
  message DescriptorStatus {
    enum Code {
      // The response code is not known.
      UNKNOWN = 0;

      // The response code to notify that the number of requests are under limit.
      OK = 1;

      // The response code to notify that the number of requests are over limit.
      OVER_LIMIT = 2;

      // The response code to notify that the number of requests are over limit.
      // The request should be allowed, but the limit should be incremented.
      // This is used for shadow mode.
      LIMIT_EXCEEDED = 3;
    }

    // The response code for an individual descriptor.
    Code code = 1;

    // The current limit as configured by the server. Useful for debugging, etc.
    RateLimit current_limit = 2;

    // The limit remaining in the current time unit.
    uint32 limit_remaining = 3;

    // The duration until reset in seconds.
    google.protobuf.Duration duration_until_reset = 4;
  }

  message RateLimit {
    // A name or description of this limit.
    string name = 3;

    // The number of requests that are allowed to be made.
    uint32 requests_per_unit = 1;

    // The unit of time.
    enum Unit {
      // The time unit is not known.
      UNKNOWN = 0;

      // The time unit representing a second.
      SECOND = 1;

      // The time unit representing a minute.
      MINUTE = 2;

      // The time unit representing an hour.
      HOUR = 3;

      // The time unit representing a day.
      DAY = 4;
    }

    Unit unit = 2;
  }
}
